--- a/referensi.bib
+++ b/referensi.bib
@@ -452,3 +452,11 @@ $
 }
 %_____________________________________________________________________________
 %=============================================================================
+
+@book{winston2004operations,
+	title={Operations research: applications and algorithms},
+	author={Winston, Wayne L and Goldberg, Jeffrey B},
+	volume={3},
+	year={2004},
+	publisher={Thomson/Brooks/Cole Belmont\^{} eCalif Calif}
+}
